Fix spacing on Notification popup for legibility

--- a/client/homebrew/brewRenderer/notificationPopup/notificationPopup.less
+++ b/client/homebrew/brewRenderer/notificationPopup/notificationPopup.less
@@ -52,7 +52,8 @@
 		list-style-type     : disc;
 		li{
 			font-size   : 0.8em;
-			line-height : 1.6em;
+			line-height : 1.4em;
+			margin-top  : 1.4em;
 			em{
 				font-weight : 800;
 			}
